# financial-planning

./: .gitignore  README.md  package-lock.json  package.json
artifacts/financial-sandbox/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/financial-sandbox/.replit-artifact/: artifact.toml
artifacts/financial-sandbox/src/: index.css
artifacts/financial-sandbox/src/components/: balance-sheet-panel.tsx  charts.tsx  forms.tsx  panels.tsx  scenario-compare.tsx  scenario-manager.tsx
artifacts/financial-sandbox/src/components/ui/: core.tsx
artifacts/financial-sandbox/src/hooks/: use-budget-state.ts  use-montecarlo.ts  use-scenarios.ts
artifacts/financial-sandbox/src/lib/: math.ts  utils.ts
artifacts/financial-sandbox/src/pages/: dashboard.tsx
artifacts/mockup-sandbox/: package.json
attached_assets/: Pasted-The-Full-Stack-Replit-PromptRole-Act-as-an-expert-Full-_1773741751885.txt
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  constants.py  database.py  main.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/routes/: __init__.py  budget.py  health.py  scenarios.py  simulate.py
backend/app/schemas/: __init__.py  balance_sheet.py  financial.py  scenarios.py  simulate.py
backend/app/services/: balance_sheet.py  montecarlo.py  number_utils.py  profile_summary.py
lib/api-client-react/: package.json
lib/api-client-react/src/: custom-fetch.ts
lib/api-spec/: openapi.yaml
